fix: debug the gap of service-block

--- a/src/components/styles/main.scss
+++ b/src/components/styles/main.scss
@@ -747,6 +747,7 @@ body {
   &__title {
     max-width: 20%;
     margin-bottom: 0 !important;
+    margin-top: 0;
   }
 
   &__info {
