--- a/src/components/styles/media_1366.scss
+++ b/src/components/styles/media_1366.scss
@@ -289,8 +289,8 @@
 
   .services {
     &__list {
-      grid-column-gap: 19px;
-      grid-row-gap: 43px;
+      grid-column-gap: 20px;
+      grid-row-gap: 20px;
 
       .services_list_item {
         border-radius: 18px;
